Italian translation for test scenarios

--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -588,7 +588,7 @@
                         <span class="durationBox">
                                 <input class="formInputDuration" type="number" name="dur_mon" ng-model="dur_mon"
                                        required
-                                       min="0" max="60" maxlength="2" placeholder="0"> mesi
+                                       min="0" max="60" maxlength="2" placeholder="0"> m.
                         </span>
                         <span class="durationBox">
                                 <input class="formInputDuration" type="number" name="dur_d" ng-model="dur_d"
