--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -483,7 +483,7 @@
                            typeahead="suggestion for suggestion in getSubjects($viewValue)"
                            typeahead-on-select="addTopicFromSuggestion()"
                            ui-keypress="{13:'addTopicFromUserInput($event)'}"
-                           placeholder="Type..." ng-maxlength="50"
+                           placeholder="tipo..." ng-maxlength="50"
                            ng-pattern="/^[a-zA-Z0-9.,:;... òàùèéì/'/-//@#*]+$/">
 
                     <div class="formTag">
@@ -617,7 +617,7 @@
                         <span class="errorTipModal" ng-show="LdCreateForm.ldScope.$error.maxlength">Massimo 50 caratteri.</span>
                         <span class="clearfix"></span>
                     </div>
-                    <label class="formLabel"><i class="icon-th-large"></i> Organizzazione*:</label>
+                    <label class="formLabel"><i class="icon-th-large"></i> Organizzazione degli studenti*:</label>
                     <div class="formInput">
                         <span class="checkModality"><input type="radio" name="org_all" ng-model="org" value="1"
                                                            required> Classe    </span>
