front side adjustments for test purposes

--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -276,12 +276,15 @@
     <button id="createActivity" type="button" class="newActButton1" href ng-click="createActivity()">
         <i class="icon-plus icon-white"></i><br>Attività
     </button>
+
+    <!-- Hide buttons to add LD or Group for test purposes
     <button id="addLD" type="button" class="newActButton2" href ng-click="addingLD()">
         <i class="icon-plus icon-white"></i><br>Progetto
     </button>
     <button id="createGroup" type="button" class="newActButton3" href ng-click="createGroup()">
         <i class="icon-plus icon-white"></i><br>Gruppo
     </button>
+    -->
 
 </div>
 
