--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -293,7 +293,7 @@
     
     <!-- Level Drop Target -->
     <div id="level-{{level}}" class="lvl-target dropHorizontal dropWidth" 
-    	x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)">Livello</div>
+    	x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)"></div>
 
     <!-- Every node is a Drag Source --> 
     <div id="{{node.node_id}}-{{node.type}}-{{node.level}}-{{node.position}}" ng-repeat="node in nodes"
@@ -352,7 +352,7 @@
             
         	<!-- Left Position Drop Target -->
             <div id="levelPosition-{{level}}-{{node.position}}" class="lvl-target leftActDrop"
-            	x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)">left-pos</div>
+            	x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)"></div>
             
             <a class="whiteText" ng-click="open(node)">
                 <h6 class="actNameEdit noClear">{{ node.node_name }}</h6>
@@ -384,14 +384,14 @@
     
     <!-- Right Position Drop Target Plus One -->
     <div id="maxPosition-{{level}}" class="lvl-target rightActDrop" 
-    	x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)">rgt-pos</div>
+    	x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)"></div>
     <!-- End Activity or Group Box -->
 
 </div>
 
 <!-- Level Drop Target Plus One -->
 <div id="maxLevel" class="lvl-target dropHorizontal dropWidth" 
-	x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)">Max Level+1</div>
+	x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)"></div>
 
 <div id="activityErrors" ng-show="alertMsg" class="alert alert-warning">
     {{ alertMsg }}
