--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -711,7 +711,8 @@
 
             </div>
             <div class="modal-footer">
-                <button id="cancelCreateLd" class="btn btnFormCancel" ng-click="closeAddActivity()">Cancella</button>
+            		<a id="cancelCreateActivity" class="btn btnFormCancel" ng-click="closeAddActivity()">Cancella</a>
+                <!-- <button id="cancelCreateLd" class="btn btnFormCancel" ng-click="closeAddActivity()">Cancella</button> -->
                 <button id="confirmCreateLD" type="submit" class="btn btnForm " ng-disabled="LdCreateForm.$invalid">
                     Crea
                 </button>
