--- a/client/css/app.css
+++ b/client/css/app.css
@@ -996,11 +996,41 @@ input[type="text"].formInputMultiple {
     text-align: left;
     float: none;
     width: 60%;
-    border: 2px dashed #dddddd !important;
+    border: 1px dashed #999999 !important;
     margin-left: 10px;
     line-height: 14px;
+    padding: 0 5px;
+    box-shadow: none;
 }
 
+
+input[type="text"].sidebarInputMultiple {
+    text-align: left;
+    float: none;
+    width: 75%;
+    border: 1px dashed #999999 !important;
+    margin: 0;
+    line-height: 12px;
+    font-size: 12px;
+    box-shadow: none;
+    padding: 0 5px;
+}
+
+
+.multiValue {
+    font-size: 12px;
+    display: block;
+    margin: -10px 0 0 28%;
+    padding: 0;
+    color: #0099CC;
+}
+.multiValueSidebar {
+    font-size: 12px;
+    display: block;
+    margin: 0 0 0 1%;
+    padding: 0;
+    color: #0099CC;
+}
 /* activities diagram
 ===================== */
 #activityErrors {
